# airbnb_clone

./: README.md  pyproject.toml
assets/: admin.py  models.py
assets/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room.py
categories/: models.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py
config/: settings.py
direct_messages/: admin.py  apps.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_message_room.py  0003_alter_chatroom_users_alter_message_room_and_more.py
experiences/: admin.py  models.py
experiences/migrations/: 0001_initial.py  0002_experience_details_alter_experience_description_and_more.py  0003_experience_category.py  0004_alter_experience_category_alter_experience_perks.py  0005_alter_experience_category_alter_experience_perks.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_house_pets_allowed.py  0003_remove_house_price_house_price_per_night.py  0004_alter_house_price_per_night.py
reservations/: admin.py  models.py
reservations/migrations/: 0001_initial.py  0002_alter_reservation_experience_alter_reservation_room_and_more.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  views.py
rooms/migrations/: 0001_initial.py  0002_room_name_alter_amenity_description.py  0003_alter_amenity_options.py  0005_room_category.py  (+2 more)
users/: admin.py  models.py
wishlists/: admin.py  models.py
(+7 files in other folders)
